Modernize project: Java 25, Panama FFM benchmark, fix JNR bug
- Upgrade Java target from 19/17 to 25 (LTS)
- Add Project Panama (FFM API) as 4th benchmark approach
- Fix JNR benchmark bug: was importing JNA classes, measuring JNA instead of JNR
- Upgrade all dependencies: JNA 5.18.1, JNR-FFI 2.2.18, JavaCPP 1.5.12,
  JMH 1.37, SLF4J 2.0.17
- Upgrade plugins: maven-compiler 3.15.0, maven-shade 3.6.1
- Remove dead JNIWrapper dependencies and jniwrapper-repo
- Add Maven Wrapper (3.9.12), GitHub Actions CI
- Improve JMH quality: add @Fork/@Warmup/@Measurement annotations,
  return List<String> to prevent dead-code elimination
- Update README with benchmark results and documentation

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>