@@ -2,11 +2,7 @@ package org.mystic.indigo;
 
 import com.epam.indigo.Indigo;
 import com.epam.indigo.IndigoObject;
-import org.mystic.jna.IndigoJNA;
-import org.openjdk.jmh.annotations.Benchmark;
-import org.openjdk.jmh.annotations.BenchmarkMode;
-import org.openjdk.jmh.annotations.Mode;
-import org.openjdk.jmh.annotations.OutputTimeUnit;
+import org.openjdk.jmh.annotations.*;
 import org.openjdk.jmh.runner.Runner;
 import org.openjdk.jmh.runner.RunnerException;
 import org.openjdk.jmh.runner.options.Options;
@@ -19,12 +15,16 @@ import java.util.List;
 import java.util.Scanner;
 import java.util.concurrent.TimeUnit;
 
+@Fork(value = 1, jvmArgs = {"--enable-native-access=ALL-UNNAMED"})
+@Warmup(iterations = 3, time = 1)
+@Measurement(iterations = 5, time = 1)
+@State(Scope.Thread)
 public class IndigoTest {
 
     @Benchmark
     @BenchmarkMode(Mode.AverageTime)
     @OutputTimeUnit(TimeUnit.MILLISECONDS)
-    public void benchmarkIndigo() throws IOException {
+    public List<String> benchmarkIndigo() throws IOException {
         Indigo indigoAPI = new Indigo();
         List<String> smilesList = new ArrayList<>();
         Scanner in = new Scanner(Paths.get("src", "test", "resources", "smiles_sample.csv"));
@@ -35,9 +35,9 @@ public class IndigoTest {
             indigoObject.aromatize();
             smilesList.add(indigoObject.canonicalSmiles());
         }
+        return smilesList;
     }
 
-//    TODO fix native libs
     public static void main(String[] args) throws RunnerException {
         Options opt = new OptionsBuilder()
                 .include(IndigoTest.class.getSimpleName())
