@@ -1,9 +1,6 @@
 package org.mystic.jna;
 
-import org.openjdk.jmh.annotations.Benchmark;
-import org.openjdk.jmh.annotations.BenchmarkMode;
-import org.openjdk.jmh.annotations.Mode;
-import org.openjdk.jmh.annotations.OutputTimeUnit;
+import org.openjdk.jmh.annotations.*;
 import org.openjdk.jmh.runner.Runner;
 import org.openjdk.jmh.runner.RunnerException;
 import org.openjdk.jmh.runner.options.Options;
@@ -16,12 +13,16 @@ import java.util.List;
 import java.util.Scanner;
 import java.util.concurrent.TimeUnit;
 
+@Fork(value = 1, jvmArgs = {"--enable-native-access=ALL-UNNAMED"})
+@Warmup(iterations = 3, time = 1)
+@Measurement(iterations = 5, time = 1)
+@State(Scope.Thread)
 public class IndigoJNA {
 
     @Benchmark
     @BenchmarkMode(Mode.AverageTime)
     @OutputTimeUnit(TimeUnit.MILLISECONDS)
-    public void benchmarkJNA() throws IOException {
+    public List<String> benchmarkJNA() throws IOException {
         IndigoAPI indigoAPI = new IndigoAPI();
         List<String> smilesList = new ArrayList<>();
         Scanner in = new Scanner(Paths.get("src", "test", "resources", "smiles_sample.csv"));
@@ -32,6 +33,7 @@ public class IndigoJNA {
             indigoObject.aromatize();
             smilesList.add(indigoObject.canonicalSmiles());
         }
+        return smilesList;
     }
 
     public static void main(String[] args) throws RunnerException {
@@ -42,6 +44,4 @@ public class IndigoJNA {
 
         new Runner(opt).run();
     }
-
-
 }
