@@ -1,11 +1,8 @@
 package org.mystic.jnr;
 
-import org.mystic.jna.IndigoAPI;
-import org.mystic.jna.IndigoObject;
-import org.openjdk.jmh.annotations.Benchmark;
-import org.openjdk.jmh.annotations.BenchmarkMode;
-import org.openjdk.jmh.annotations.Mode;
-import org.openjdk.jmh.annotations.OutputTimeUnit;
+import org.mystic.jnr.IndigoAPI;
+import org.mystic.jnr.IndigoObject;
+import org.openjdk.jmh.annotations.*;
 import org.openjdk.jmh.runner.Runner;
 import org.openjdk.jmh.runner.RunnerException;
 import org.openjdk.jmh.runner.options.Options;
@@ -18,12 +15,16 @@ import java.util.List;
 import java.util.Scanner;
 import java.util.concurrent.TimeUnit;
 
+@Fork(value = 1, jvmArgs = {"--enable-native-access=ALL-UNNAMED"})
+@Warmup(iterations = 3, time = 1)
+@Measurement(iterations = 5, time = 1)
+@State(Scope.Thread)
 public class IndigoJNR {
 
     @Benchmark
     @BenchmarkMode(Mode.AverageTime)
     @OutputTimeUnit(TimeUnit.MILLISECONDS)
-    public void benchmarkJNR() throws IOException {
+    public List<String> benchmarkJNR() throws IOException {
         IndigoAPI indigoAPI = new IndigoAPI();
         List<String> smilesList = new ArrayList<>();
         Scanner in = new Scanner(Paths.get("src", "test", "resources", "smiles_sample.csv"));
@@ -34,6 +35,7 @@ public class IndigoJNR {
             indigoObject.aromatize();
             smilesList.add(indigoObject.canonicalSmiles());
         }
+        return smilesList;
     }
 
     public static void main(String[] args) throws RunnerException {
